--- a/asistencia/src/app/pages/login/login.component.html
+++ b/asistencia/src/app/pages/login/login.component.html
@@ -15,13 +15,13 @@
         <ion-card-content>
             <ion-list>
                   <ion-item>
-                    <ion-label>Clase 1</ion-label><ion-button fill="outline">Generar QR</ion-button>
+                    <ion-label>Clase 1</ion-label><ion-button routerLink="/attendance" fill="outline">Generar QR</ion-button>
                   </ion-item>
                   <ion-item>
-                    <ion-label>Clase 2</ion-label><ion-button fill="outline">Generar QR</ion-button>
+                    <ion-label>Clase 2</ion-label><ion-button routerLink="/attendance" fill="outline">Generar QR</ion-button>
                   </ion-item>
                   <ion-item>
-                    <ion-label>Clase 3</ion-label><ion-button fill="outline">Generar QR</ion-button>
+                    <ion-label>Clase 3</ion-label><ion-button routerLink="/attendance" fill="outline">Generar QR</ion-button>
                   </ion-item>
             </ion-list>
         </ion-card-content>
