--- a/asistencia/src/app/pages/restore/restore.component.html
+++ b/asistencia/src/app/pages/restore/restore.component.html
@@ -16,7 +16,7 @@
                 </ion-item>
             </ion-list>
             <ion-item>
-                <ion-button slot="end" size="small"> RECUPERAR </ion-button>
+                <ion-button routerLink="/home" slot="end" size="small"> RECUPERAR </ion-button>
             </ion-item>
         </ion-card-content>
     </ion-card>
