--- a/asistencia/src/app/pages/home/home.component.html
+++ b/asistencia/src/app/pages/home/home.component.html
@@ -12,17 +12,17 @@
         <ion-card-content>
             <ion-list>
                 <ion-item>
-                    <ion-input label="Email" type="email" placeholder="ej.emplo@duocuc.cl"></ion-input>
+                    <ion-input label="Email:" type="email" placeholder="ej.emplo@duocuc.cl"></ion-input>
                 </ion-item>
                 <ion-item>
-                    <ion-input label="Password" type="password" value="password"></ion-input>
+                    <ion-input label="Password:" type="password" value="password"></ion-input>
                 </ion-item>
             </ion-list>
-            <a href="" style="color: red;">
+            <a routerLink="/restore" style="color: red;">
                 <ion-icon name="lock-open-outline"></ion-icon> RECUPERAR CONTRASEÑA
             </a>
             <ion-item>
-                <ion-button slot="end" size="small"> Ingresar </ion-button>
+                <ion-button routerLink="/login" slot="end" size="small"> Ingresar </ion-button>
             </ion-item>
         </ion-card-content>
     </ion-card>
