--- a/asistencia/src/app/pages/attendance/attendance.component.html
+++ b/asistencia/src/app/pages/attendance/attendance.component.html
@@ -1,1 +1,24 @@
-<p>QR</p>
+<ion-header>
+    <ion-toolbar>
+        <ion-title><ion-img src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Logo_DuocUC.svg"
+                alt="logo"></ion-img></ion-title>
+    </ion-toolbar>
+</ion-header>
+<ion-content class="ion-padding">
+    <ion-button routerLink="/login" color="light">
+        <ion-icon name="arrow-undo-circle-outline"></ion-icon>
+    </ion-button>
+    <ion-card>
+        <ion-card-header>
+            
+        </ion-card-header>
+        <ion-card-content>
+      
+        </ion-card-content>
+    </ion-card>
+</ion-content>
+<ion-footer>
+    <ion-toolbar>
+        <ion-title> Derechos reservados </ion-title>
+    </ion-toolbar>
+</ion-footer>
