--- a/asistencia/src/app/pages/restore/restore.component.html
+++ b/asistencia/src/app/pages/restore/restore.component.html
@@ -5,6 +5,9 @@
     </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
+    <ion-button routerLink="/home" color="light">
+        <ion-icon name="arrow-undo-circle-outline"></ion-icon>
+    </ion-button>
     <ion-card>
         <ion-card-header>
             <ion-card-title>RECUPERAR CONTRASEÑA</ion-card-title>
