--- a/asistencia/src/app/pages/login/login.component.html
+++ b/asistencia/src/app/pages/login/login.component.html
@@ -5,12 +5,13 @@
     </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
+    <ion-button routerLink="/home" color="light">
+        <ion-icon name="arrow-undo-circle-outline"></ion-icon>
+    </ion-button>
     <ion-card>
         <ion-card-header>
-            <ion-card-title>¡BIENVENIDO!</ion-card-title> 
-            <ion-item>
-            <ion-label color="warning">Warning</ion-label>
-            </ion-item>
+            <ion-card-title>¡BIENVENIDO! <ion-label color="warning">Warning</ion-label></ion-card-title> 
+            
         </ion-card-header>
         <ion-card-content>
             <ion-list>
