--- a/asistencia/src/app/pages/attendance/attendance.component.html
+++ b/asistencia/src/app/pages/attendance/attendance.component.html
@@ -1,8 +1,7 @@
 <ion-header>
-    <ion-toolbar>
-        <ion-title><ion-img src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Logo_DuocUC.svg"
-                alt="logo"></ion-img></ion-title>
-    </ion-toolbar>
+    <ion-img style="margin-bottom: 10px; margin-top: 5px;"
+        src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Logo_DuocUC.svg" alt="logo">
+    </ion-img>
 </ion-header>
 <ion-content class="ion-padding">
     <ion-button routerLink="/login" color="light">
@@ -10,15 +9,15 @@
     </ion-button>
     <ion-card>
         <ion-card-header>
-            
+
         </ion-card-header>
         <ion-card-content>
-      
+
         </ion-card-content>
     </ion-card>
 </ion-content>
 <ion-footer>
     <ion-toolbar>
-        <ion-title> Derechos reservados </ion-title>
+        <ion-title style="font-family: 'Times New Roman', Times, serif;"> Derechos reservados </ion-title>
     </ion-toolbar>
 </ion-footer>
