--- a/asistencia/src/app/pages/login/login.component.html
+++ b/asistencia/src/app/pages/login/login.component.html
@@ -1,8 +1,7 @@
 <ion-header>
-    <ion-toolbar>
-        <ion-title><ion-img src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Logo_DuocUC.svg"
-                alt="logo"></ion-img></ion-title>
-    </ion-toolbar>
+    <ion-img style="margin-bottom: 10px; margin-top: 5px;"
+        src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Logo_DuocUC.svg" alt="logo">
+    </ion-img>
 </ion-header>
 <ion-content class="ion-padding">
     <ion-button routerLink="/home" color="light">
@@ -10,26 +9,30 @@
     </ion-button>
     <ion-card>
         <ion-card-header>
-            <ion-card-title>¡BIENVENIDO! <ion-label color="warning">Warning</ion-label></ion-card-title> 
-            
+            <ion-card-title style="font-family: 'Times New Roman', Times, serif;">¡BIENVENIDO! <ion-label
+                    color="warning">Warning</ion-label></ion-card-title>
+
         </ion-card-header>
         <ion-card-content>
             <ion-list>
-                  <ion-item>
-                    <ion-label>Clase 1</ion-label><ion-button routerLink="/attendance" fill="outline">Generar QR</ion-button>
-                  </ion-item>
-                  <ion-item>
-                    <ion-label>Clase 2</ion-label><ion-button routerLink="/attendance" fill="outline">Generar QR</ion-button>
-                  </ion-item>
-                  <ion-item>
-                    <ion-label>Clase 3</ion-label><ion-button routerLink="/attendance" fill="outline">Generar QR</ion-button>
-                  </ion-item>
+                <ion-item>
+                    <ion-label>Clase 1</ion-label><ion-button routerLink="/attendance" fill="outline">Generar
+                        QR</ion-button>
+                </ion-item>
+                <ion-item>
+                    <ion-label>Clase 2</ion-label><ion-button routerLink="/attendance" fill="outline">Generar
+                        QR</ion-button>
+                </ion-item>
+                <ion-item>
+                    <ion-label>Clase 3</ion-label><ion-button routerLink="/attendance" fill="outline">Generar
+                        QR</ion-button>
+                </ion-item>
             </ion-list>
         </ion-card-content>
     </ion-card>
 </ion-content>
 <ion-footer>
     <ion-toolbar>
-        <ion-title> Derechos reservados </ion-title>
+        <ion-title style="font-family: 'Times New Roman', Times, serif;"> Derechos reservados </ion-title>
     </ion-toolbar>
 </ion-footer>
