--- a/asistencia/src/app/pages/restore/restore.component.html
+++ b/asistencia/src/app/pages/restore/restore.component.html
@@ -1,7 +1,8 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title><ion-img src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Logo_DuocUC.svg"
-                alt="logo"></ion-img></ion-title>
+        <ion-img style="margin-bottom: 10px; margin-top: 5px;"
+            src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Logo_DuocUC.svg" alt="logo">
+        </ion-img>
     </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
@@ -10,7 +11,7 @@
     </ion-button>
     <ion-card>
         <ion-card-header>
-            <ion-card-title>RECUPERAR CONTRASEÑA</ion-card-title>
+            <ion-card-title style="font-family: 'Times New Roman', Times, serif;">RECUPERAR CONTRASEÑA</ion-card-title>
         </ion-card-header>
         <ion-card-content>
             <ion-list>
@@ -19,13 +20,13 @@
                 </ion-item>
             </ion-list>
             <ion-item>
-                <ion-button routerLink="/home" slot="end" size="small"> RECUPERAR </ion-button>
+                <ion-button routerLink="/home" slot="end" size="small">ENVIAR</ion-button>
             </ion-item>
         </ion-card-content>
     </ion-card>
 </ion-content>
 <ion-footer>
     <ion-toolbar>
-        <ion-title> Derechos reservados </ion-title>
+        <ion-title style="font-family: 'Times New Roman', Times, serif;"> Derechos reservados </ion-title>
     </ion-toolbar>
 </ion-footer>
